[package]
name = "paytube-svm"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.0"
solana-compute-budget = "2.0.0"
solana-program-runtime = "2.0.0"
solana-sdk = "2.0.0"
solana-svm = "2.0.0"
solana-system-program = "2.0.0"

[dev-dependencies]
solana-logger = "2.0.0"
solana-test-validator = "2.0.0"
