[package]
name = "paytube-svm"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
solana-bpf-loader-program = { workspace = true }
solana-client = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { path = "../solana-svm" }

[dev-dependencies]
solana-logger = { workspace = true }
solana-test-validator = { workspace = true }
