[package]
name = "solana-svm"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
itertools = "0.10.5"
log = "0.4.21"
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-system-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_svm"
